--- a/index.html
+++ b/index.html
@@ -4,9 +4,133 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="./assets/styles/dist/main.css"/>
+  <title>Start Up New Future</title>
 </head>
 <body>
-  <h1>Demo</h1>
+  <div class="wrap">
+    <header class="header column col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12">
+      <a href="#" class="header__menu-shortcut" data-menu-toggle><i class="fa fa-bars"></i>MENU</a>  
+      <h1 class="header__welcome-text">welcome bro!</h1>
+    </header>
+    <section class="sidebar column col-xs-12 col-s-4 col-m-3 col-l-2 col-xl-2" data-menu>
+      <img src="assets/img/logo.png" class="logo" alt="company logo" />
+      <h2 class="column__heading">Look up for more features</h2>
+      <nav>
+        <ul class="main-menu items-list">
+          <li class="main-menu__item"><a href="/1" class="main-menu__item-link"><i class="fa fa-code-fork"></i> projects</a></li>
+          <li class="main-menu__item"><a href="/2" class="main-menu__item-link">ideas</a></li>
+          <li class="main-menu__item main-menu__item_long"><a href="/3" class="main-menu__item-link">customers <i class="fa fa-heart main-menu__item-icon"></i></a></li>
+          <li class="main-menu__item main-menu__item_long"><a href="/4" class="main-menu__item-link">what's up?</a></li>
+          <li class="main-menu__item"><a href="/5" class="main-menu__item-link"><i class="fa fa-map-marker main-menu__item-icon"></i>find us!</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="main-menu__close" data-menu-toggle><i class="fa fa-times"></i> close</a>
+    </section>
+    <article class="column column_dark column_intro col-xs-12 col-s-8 col-m-9 col-l-10 col-xl-10">
+      <h2 class="column__heading">who we are</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna.</p>
+    </article>
+    <div class="column column_wrapper col-xs-12 col-s-8 col-m-9 col-l-10 col-xl-10">
+      <section class="column column_casual column_personalities col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-6">
+          <div class="person person_front">
+            <img class="person__img" src="assets/img/dummy3-3.jpg" alt="frontend dev" />
+            <p class="person__desc">design &amp;<br />frontend</p>
+          </div>
+          <div class="person person_back">
+            <img class="person__img" src="assets/img/dummy1-3.jpg" alt="bac-end dev" />
+            <p class="person__desc">projecting<br />&amp; backend</p>
+          </div>
+          <div class="person person_test">
+            <img class="person__img" src="assets/img/dummy2-3.jpg" alt="manager" />
+            <p class="person__desc">testing &amp; <br />managing</p>
+          </div>
+      </section>
+      <article class="column column_casual column_what-we-do col-xs-12 col-s-12 col-m-6 col-l-6 col-xl-6">
+        <h2 class="column__heading">what we do</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Nullam non nulla finibus, <a href="">varius ante vitae</a>, semper nisl. Ut vel turpis vitae purus luctus laoreet. Nullam ac eros at diam tempor eleifend quis phare  tra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet.Morbi vel scelerisque mi. <a href="">Lorem ipsum dolor</a> sit amet, <a href="">consectetur</a> adipiscing elit. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel <a href="">scelerisque</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Nullam non nulla finibus, <a href="">varius ante vitae</a>, semper nisl. Ut vel turpis vitae purus luctus laoreet. Nullam ac eros at diam tempor eleifend quis phare  tra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor.</p>
+      </article>
+    </div>
+    <article class="column column_darker col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12">
+      <h2 class="column__heading">check out our latest projects</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel scelerisque mi.</p>
+      <h3 class="go-on-projects">
+        <span>Go on!</span>
+        <a href="/project1">project #1</a>
+        <a href="/project2">project #2</a>
+        <a href="/project3">project #3</a>
+      </h3>
+    </article>
+    <article class="column column_project col-xs-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+      <a href="#" class="link-wrapper">
+        <h2 class="column__heading">project #1</h2>
+      </a>
+      <div class="project__img-wrapper">
+        <a href="#" class="link-wrapper"><img class="project__illustration" src="assets/img/dummy_project3.png" alt="design of the future" /></a>
+        <div class="project__desc">
+          <h3 class="project__title">"DESIGN OF THE FUTURE"</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. <a href="">Etiam a feugiat velit</a>, sit amet sodales urna. Nullam non nulla finibus, varius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel scelerisque mi.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Ninibus, varius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna. Narius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. <a href="">Ut vel turpis vitae purus.</a></p>
+        </div>
+      </div>
+    </article>
+    <article class="column column_casual column_project col-xs-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+      <a href="#" class="link-wrapper">
+        <h2 class="column__heading">project #2</h2>
+      </a>
+      <div class="project__img-wrapper">
+        <a href="#" class="link-wrapper"><img class="project__illustration" src="assets/img/dummy_project2_large.jpg" alt="new technologies" /></a>
+        <div class="project__desc">
+          <h3 class="project__title">"NEW TECHNOLOGIES"</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna. <a href="">Nullam non nulla finibus</a>, varius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel scelerisque mi.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna. Nullam non nulla finibus, varius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor.</p>
+        </div>
+      </div>
+    </article>
+    <article class="column column_promo column_project col-xs-12 col-s-12 col-m-12 col-l-4 col-xl-4">
+      <a href="#" class="link-wrapper">
+        <h2 class="column__heading">project #3</h2>
+      </a>
+      <div class="project__img-wrapper">
+        <a href="#" class="link-wrapper project__img_last-project"><img class="project__illustration" src="assets/img/dummy_project1_large.jpg" alt="future is now" /></a>
+        <div class="project__desc">
+          <h3 class="project__title">"FUTURE IS NOW!"</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna. Nullam non nulla finibus, varius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel scelerisque mi.</p>
+          <p><a href="">Praesent</a> et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel scelerisque mi.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna. Nullam non nulla finibus, varius ante vitae, semper nisl. Nullam ac eros at diam tempor eleifend quis pharetra nibh. Praesent et tellus mattis tortor aliquam feugiat at vitae tortor. Ut vel turpis vitae purus luctus laoreet. Morbi vel scelerisque mi.</p>
+        </div>
+      </div>
+    </article>
+    <footer class="footer column col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12">
+      <h2 class="column__heading footer__heading">stay tuned</h2>
+      <p class="footer__socials-block">
+        <span class="footer__socials-list">
+          <a href="#" class="footer__social-icon">
+            <i class="fa fa-google-plus-square footer__icon-hover"></i><i class="fa fa-google-plus footer__icon-hidden"></i>
+          </a>
+          <a href="#" class="footer__social-icon">
+            <i class="fa fa-twitter-square footer__icon-hover"></i><i class="fa fa-twitter footer__icon-hidden"></i>
+          </a>
+          <a href="#" class="footer__social-icon"><i class="fa fa-facebook-square footer__icon-hover"></i><i class="fa fa-facebook footer__icon-hidden"></i>
+          </a>
+          <a href="#" class="footer__social-icon">
+            <i class="fa fa-pinterest-square footer__icon-hover"></i><i class="fa fa-pinterest-p footer__icon-hidden"></i>
+          </a>
+        </span>
+        <span class="footer__social-icon footer__share-icon" data-share-icon>
+          <i class="fa fa-share-alt"></i>
+          <span class="footer__share-socials-list" data-share-socials>
+            <a class="footer__share-list-icon" href="#"><i class="fa fa-google-plus"></i></a>
+            <a class="footer__share-list-icon" href="#"><i class="fa fa-twitter"></i></a>
+            <a class="footer__share-list-icon" href="#"><i class="fa fa-facebook"></i></a>
+          </span>
+        </span>
+      </p>
+    </footer>
+  </div>
+  <script src="./assets/scripts/dist/lib/vendor.js"></script>
+  <script src="./assets/scripts/dist/main.js"></script>
 </body>
 </html>
