--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     <article class="column column_project col-xs-12 col-s-6 col-m-6 col-l-4 col-xl-4">
       <a href="#" class="link-wrapper">
         <h2 class="column__heading">project #1</h2>
+        <span class="project__read-more">
+          read more
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+        </span>
       </a>
       <div class="project__img-wrapper">
         <a href="#" class="link-wrapper"><img class="project__illustration" src="assets/img/dummy_project3.png" alt="design of the future" /></a>
@@ -80,6 +86,12 @@
     <article class="column column_casual column_project col-xs-12 col-s-6 col-m-6 col-l-4 col-xl-4">
       <a href="#" class="link-wrapper">
         <h2 class="column__heading">project #2</h2>
+        <span class="project__read-more">
+          read more
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+        </span>
       </a>
       <div class="project__img-wrapper">
         <a href="#" class="link-wrapper"><img class="project__illustration" src="assets/img/dummy_project2_large.jpg" alt="new technologies" /></a>
@@ -93,6 +105,12 @@
     <article class="column column_promo column_project col-xs-12 col-s-12 col-m-12 col-l-4 col-xl-4">
       <a href="#" class="link-wrapper">
         <h2 class="column__heading">project #3</h2>
+        <span class="project__read-more">
+          read more
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+          <i class="project__read-more-icon fa fa-chevron-right"></i>
+        </span>
       </a>
       <div class="project__img-wrapper">
         <a href="#" class="link-wrapper project__img_last-project"><img class="project__illustration" src="assets/img/dummy_project1_large.jpg" alt="future is now" /></a>
