fix bug on landscape orientation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="wrap">
     <header class="header column col-xs-12 col-s-12 col-m-12 col-l-12 col-xl-12">
       <a href="#" class="header__menu-shortcut" data-menu-toggle><i class="fa fa-bars"></i>MENU</a>  
-      <h1 class="header__welcome-text">welcome bro!</h1>
+      <p class="header__welcome-text">welcome bro!</p>
     </header>
     <section class="sidebar column col-xs-12 col-s-4 col-m-3 col-l-2 col-xl-2" data-menu>
       <img src="assets/img/logo.png" class="logo" alt="company logo" />
@@ -30,7 +30,7 @@
       <a href="#" class="main-menu__close" data-menu-toggle><i class="fa fa-times"></i> close</a>
     </section>
     <article class="column column_dark column_intro col-xs-12 col-s-8 col-m-9 col-l-10 col-xl-10">
-      <h2 class="column__heading">who we are</h2>
+      <h1 class="column__heading">who we are</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia leo at dictum fringilla. Pellentesque lobortis interdum libero, id suscipit tortor consequat non. Sed odio ex, consectetur at viverra in, faucibus eu nibh. Etiam a feugiat velit, sit amet sodales urna.</p>
     </article>
     <div class="column column_wrapper col-xs-12 col-s-8 col-m-9 col-l-10 col-xl-10">
